--- a/package.json
+++ b/package.json
@@ -18,20 +18,25 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "essentia.js": "^0.1.3",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "uniqid": "^5.4.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
