--- a/package.json
+++ b/package.json
@@ -13,39 +13,42 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/auth-ui-react": "^0.4.6",
+    "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.88.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "essentia.js": "^0.1.3",
-    "fs": "^0.0.1-security",
-    "lucide-react": "^0.294.0",
-    "next": "14.0.3",
-    "query-string": "^8.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "lucide-react": "^0.561.0",
+    "next": "16.0.10",
+    "query-string": "^9.3.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.1.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uniqid": "^5.4.0",
-    "use-sound": "^4.0.1",
-    "zustand": "^4.4.7"
+    "use-sound": "^5.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.19.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@types/uniqid": "^5.3.4",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.0.10",
     "postcss": "^8",
-    "supabase": "^1.115.4",
-    "tailwindcss": "^3.3.0",
+    "supabase": "^2.67.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3"
   }
 }
